--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -27,8 +27,8 @@
       <nz-breadcrumb style="margin:16px 0;">
         <nz-breadcrumb-item>Gameboard</nz-breadcrumb-item>
       </nz-breadcrumb>
-      <div style="padding:24px; background: #fff; min-height: 360px;">
-        The gig is up
+      <div style="padding:24px; background: #000000; min-height: 360px;">
+        <router-outlet></router-outlet>
       </div>
     </nz-content>
     <nz-footer style="text-align: center;">some footer</nz-footer>
