--- a/src/app/shared/question-category/question-category.component.scss
+++ b/src/app/shared/question-category/question-category.component.scss
@@ -3,15 +3,10 @@
 }
 
 .category-title-wrapper, li {
-  // display: flex;
-  // justify-content: space-around;
   height: 120px;
-  width: 200px;
+  width: 100%;
   font-size: 25px;
   font-weight: 600;
-  // word-wrap: break-word;
-  // white-space: initial;
-  // line-height: 100px;
   text-align: center;
   vertical-align: middle;
   background-color: #213b9c;
