--- a/src/app/pages/game-page/game-page.component.scss
+++ b/src/app/pages/game-page/game-page.component.scss
@@ -7,12 +7,12 @@
 
 .question-category-wrapper {
   display: flex;
-  justify-content: space-around;
 }
 
 .question-category-list {
   display: flex;
   flex-direction: row;
+  width: 25%;
 }
 
 .game-title {
@@ -20,4 +20,27 @@
   text-align: center;
   font-size: 30px;
   font-weight: 500;
+}
+
+.all-in-button-wrapper {
+  height: 70px;
+  padding: 10px;
+  margin: 0 5px;
+  border-radius: 2px;
+  background-color: #213b9c;
+  display: flex;
+  justify-content: space-around;
+}
+
+.all-in-button {
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+  text-align: center;
+  outline: none;
+  border: none;
+  background-color: darkslategrey;
 }
