adding subsctiption in the game play component

--- a/src/app/pages/play-page/play-page.component.html
+++ b/src/app/pages/play-page/play-page.component.html
@@ -1,3 +1,5 @@
 <div class="play-page-wrapper">
-
+  <div class="question-wrapper" *ngIf="question">
+    <div class="question-text">{{ question.questionText }}</div>
+  </div>
 </div>
