--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -34,7 +34,7 @@
       <nz-breadcrumb style="margin:16px 0;">
         <nz-breadcrumb-item>Gameboard</nz-breadcrumb-item>
       </nz-breadcrumb>
-      <div style="padding:24px; background: #000000; min-height: 360px;">
+      <div style="padding:24px; background: #fff; min-height: 360px;">
         <router-outlet></router-outlet>
       </div>
     </nz-content>
