--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="all-in-button-wrapper">
-      <button class="all-in-button">All In</button>
+      <button class="all-in-button" (click)="showAllIn()">All In</button>
     </div>
   </div>
 </div>
