--- a/src/app/shared/question-category/question-category.component.html
+++ b/src/app/shared/question-category/question-category.component.html
@@ -1,12 +1,14 @@
+    {{!questions[0].isActive}}
+
 <div class="category-container">
   <div class="category-wrapper" *ngIf="!category.isAllIn">
     <div class="category-title-wrapper">
       <p class="category-title">{{ category.categoryText }}</p>
     </div>
     <ul>
-      <li *ngIf="questions[0]" (click)="selectDifficulty(0)">Easy</li>
-      <li *ngIf="questions[1]" (click)="selectDifficulty(1)">Medium</li>
-      <li *ngIf="questions[2]" (click)="selectDifficulty(2)">Hard</li>
+      <li *ngIf="questions[0]" [ngClass]="{'disabled': !questions[0].isActive }" (click)="selectDifficulty(0)">Easy</li>
+      <li *ngIf="questions[1]" [ngClass]="{'disabled': questions[1].isActive }" (click)="selectDifficulty(1)">Medium</li>
+      <li *ngIf="questions[2]" [ngClass]="{'disabled': questions[2].isActive }" (click)="selectDifficulty(2)">Hard</li>
     </ul>
   </div>
 </div>
