--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -38,6 +38,6 @@
         <router-outlet></router-outlet>
       </div>
     </nz-content>
-    <nz-footer style="text-align: center;">some footer</nz-footer>
+    <!-- <nz-footer style="text-align: center;">some footer</nz-footer> -->
   </nz-layout>
 </nz-layout>
