--- a/src/app/pages/game-page/game-page.component.scss
+++ b/src/app/pages/game-page/game-page.component.scss
@@ -11,8 +11,8 @@
 
 .question-category-list {
   display: flex;
-  flex-direction: row;
-  width: 25%;
+  flex-flow: row nowrap;
+  width: 100%;
 }
 
 .game-title {
@@ -20,6 +20,10 @@
   text-align: center;
   font-size: 30px;
   font-weight: 500;
+}
+
+.non-all-in-categories-wrapper {
+  width: 100%;
 }
 
 .all-in-button-wrapper {
