--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -7,3 +7,22 @@
 .ant-layout {
   height: 100%;
 }
+
+.host-controls {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  
+  button {
+    border-radius: 25px;
+    height: 50px;
+    width: 140px;
+    margin-bottom: 10px;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+  }
+  
+}
+
+nz-layout.ant-layout {
+  background-color: black;
+}
