--- a/src/app/shared/question-category/question-category.component.scss
+++ b/src/app/shared/question-category/question-category.component.scss
@@ -21,6 +21,15 @@ ul {
     color: #ffcc00;
     line-height: 100px;
   }
+
+  li:hover {
+    z-index: 10000;
+    background-color: #3097d3;
+    color: white;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
+    transform: translatey(0px);
+    animation: float 1s;
+  }
 }
 
 .category-title-wrapper {
@@ -32,4 +41,21 @@ ul {
   color: white;
   margin: 0 auto;
   overflow-wrap: break-word;
+}
+
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-20px);
+  }
+
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
 }
