--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,11 +1,14 @@
 <nz-layout>
-  <nz-content style="margin:0 16px;">
-  <div class="host-controls">
-    <button><a routerLink="/" class="menu-item">Gameboard</a></button>
-    <button><a routerLink="/leadership" class="menu-item">Leaderboard</a></button>
-    <button><a routerLink="/teams" class="menu-item">Teams</a></button>
-    <button><a class="menu-item">Reset Game</a></button>
-  </div>
+    <nz-sider [nzWidth]="200" style="background:#000000">
+        <div class="host-controls">
+            <button><a routerLink="/" class="menu-item">Gameboard</a></button>
+            <button><a routerLink="/leadership" class="menu-item">Leaderboard</a></button>
+            <button><a routerLink="/teams" class="menu-item">Teams</a></button>
+            <button><a class="menu-item">Reset Game</a></button>
+          </div>
+    </nz-sider>
+  <!-- <nz-content style="margin:0 16px;"> -->
+
   <nz-layout>
     <nz-content style="margin:0 16px;">
     <div style="padding:24px; background: #000000; min-height: 360px;">
