--- a/src/app/pages/play-page/play-page.component.html
+++ b/src/app/pages/play-page/play-page.component.html
@@ -1,9 +1,10 @@
+<h2 style="color: white">{{countDown}}</h2>
 <div class="play-page-wrapper" *ngIf="question; else loading">
   <div class="question-wrapper">
-    <div class="question-text" style="color: white">{{ question.questionText }}</div>
+    <div class="question-text" style="color: white">{{ question.questionText }}</div>   
+
   </div>
-  <h2>{{countDown}}</h2>
-  <h1>{{songName}}</h1>
+  <h1 style="color: white; float:right;">{{songName}}</h1>
 
 <div>
     <button nz-button nzType="primary" *ngIf="!showAnswers" (click)="showQuestionAnswers()"  nzBlock>Show Answers</button>
@@ -17,7 +18,7 @@
     </nz-checkbox-wrapper>
 </div>
 
-<button class="play-page-button" nz-button nzType="primary" *ngIf="showAnswers" (click)="startMusic()"  nzBlock>Start Music</button>
+<button class="play-page-button" nz-button nzType="primary" *ngIf="showAnswers" [disabled]="disableStartMusicButton" (click)="startMusic()"  nzBlock>Start Music</button>
 
 </div>
 <button class="play-page-button" nz-button nzType="primary" *ngIf="showSubmitAnswersButton" (click)="submitAnswers()"  nzBlock>Submit</button>
