centred side nav bar items

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,10 +1,10 @@
 <nz-layout>
     <nz-sider [nzWidth]="200" style="background:#000000">
         <div class="host-controls">
-            <button><a routerLink="/" class="menu-item">Gameboard</a></button>
-            <button><a routerLink="/leadership" class="menu-item">Leaderboard</a></button>
-            <button><a routerLink="/teams" class="menu-item">Teams</a></button>
-            <button><a class="menu-item">Reset Game</a></button>
+            <button style="text-align: center;" routerLink="/">Gameboard</button>
+            <button style="text-align: center;" routerLink="/leadership">Leaderboard</button>
+            <button style="text-align: center;" routerLink="/teams">Teams</button>
+            <button style="text-align: center;">Reset Game</button>
           </div>
     </nz-sider>
   <!-- <nz-content style="margin:0 16px;"> -->
