client page wiring it up

--- a/src/app/pages/play-page/play-page.component.html
+++ b/src/app/pages/play-page/play-page.component.html
@@ -13,7 +13,8 @@
 <div *ngIf="showAnswers">
     <nz-checkbox-wrapper style="width: 100%;" (nzOnChange)="updateArrayOfAnswers($event)">
         <div nz-row class="answers-wrapper" *ngFor="let answer of question.answers">
-            <div nz-col nzSpan="24"><label nz-checkbox nzValue="{{answer.id}}" style="color: white">{{ answer.answerText }}</label></div>
+            <!-- <div nz-col nzSpan="24"><label nz-checkbox nzValue="{{answer.id}}" style="color: white">{{ answer.answerText }}</label></div> -->
+            <div nz-col nzSpan="24">{{ answer.answerText }}</div>
         </div>
     </nz-checkbox-wrapper>
 </div>
@@ -21,7 +22,7 @@
 <button class="play-page-button" nz-button nzType="primary" *ngIf="showAnswers" [disabled]="disableStartMusicButton" (click)="startMusic()"  nzBlock>Start Music</button>
 
 </div>
-<button class="play-page-button" nz-button nzType="primary" *ngIf="showSubmitAnswersButton" (click)="submitAnswers()"  nzBlock>Submit</button>
+<!-- <button class="play-page-button" nz-button nzType="primary" *ngIf="showSubmitAnswersButton" (click)="submitAnswers()"  nzBlock>Submit</button> -->
 <ng-template #loading>
   Loading stuff...
 </ng-template>
