added static scores

--- a/src/app/pages/leader-page/leader-page.component.html
+++ b/src/app/pages/leader-page/leader-page.component.html
@@ -1,3 +1,17 @@
-<p>
-  leader-page works!
-</p>
+          <div nz-row [nzGutter]="8">
+              <div nz-col [nzSpan]="8">
+                <nz-card nzTitle="TeamA">
+                    <p>Points: 1200</p>
+                  </nz-card>
+              </div>
+              <div nz-col [nzSpan]="8">
+                <nz-card nzTitle="TeamB">
+                    <p>Points: -200</p>
+                  </nz-card>
+              </div>
+              <div nz-col [nzSpan]="8">
+                <nz-card nzTitle="TeamC">
+                    <p>Points: 3500</p>
+                  </nz-card>
+              </div>
+            </div>
