addd color to text

--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -22,5 +22,5 @@
       Submit
     </button>
   </div>
-  <ng-template #loading>Wait for the question.</ng-template>
+  <ng-template #loading style="color: white">Wait for the question.</ng-template>
 </div>
