--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,17 +1,15 @@
 <nz-layout>
-    <nz-sider [nzWidth]="200" style="background:#000000">
-        <div class="host-controls">
-            <button style="text-align: center;" routerLink="/">Gameboard</button>
-            <button style="text-align: center;" routerLink="/leadership">Leaderboard</button>
-            <button style="text-align: center;" routerLink="/teams">Teams</button>
-            <button style="text-align: center;">Reset Game</button>
-          </div>
-    </nz-sider>
-  <!-- <nz-content style="margin:0 16px;"> -->
-
+  <nz-sider *ngIf="false" [nzWidth]="200">
+    <div class="host-controls">
+      <button style="text-align: center;" routerLink="/">Gameboard</button>
+      <button style="text-align: center;" routerLink="/leadership">Leaderboard</button>
+      <button style="text-align: center;" routerLink="/teams">Teams</button>
+      <button style="text-align: center;">Reset Game</button>
+    </div>
+  </nz-sider>
   <nz-layout>
     <nz-content style="margin:0 16px;">
-    <div style="padding:24px; background: #000000; min-height: 360px;">
+    <div class="content-wrapper">
       <router-outlet></router-outlet>
     </div>
   </nz-content>
