--- a/src/app/pages/client-page/team-selection/team-selection.component.html
+++ b/src/app/pages/client-page/team-selection/team-selection.component.html
@@ -1,7 +1,14 @@
 <div class="team-selection-wrapper">
   <div class="team-list-wrapper" *ngIf="teams">
-    <nz-select nzShowSearch nzAllowClear nzPlaceHolder="Select a team" [(ngModel)]="selectedTeam">
-      <nz-option [nzLabel]="team.name" [nzValue]="team" *ngFor="let team of teams"></nz-option>
+    <nz-select 
+      #selectComponent
+      nzShowSearch 
+      nzAllowClear 
+      (focus)="selectComponent.blur()"
+      [nzAutoFocus]="false"
+      nzPlaceHolder="Select a team" 
+      [(ngModel)]="selectedTeam">
+      <nz-option [nzLabel]="team.name" [nzValue]="team" *ngFor="let team of teams" (nzSelect)="handleSelect(team)"></nz-option>
     </nz-select>
   </div>
   <div class="username-input-wrapper" *ngIf="selectedTeam">
@@ -10,6 +17,6 @@
     </nz-input-group>
     <ng-template #prefixTemplate><i nz-icon type="user"></i></ng-template>
     <ng-template #suffixTemplate><i nz-icon type="close-circle" (click)="username=null" *ngIf="username"></i></ng-template>
-    <button class="user-submit-btn" (click)="createUser()" [disabled]="!username">Submit</button>
+    <button class="user-submit-btn" (tap)="createUser()" [disabled]="!username">Submit</button>
   </div>
 </div>
