--- a/src/app/pages/client-page/team-selection/team-selection.component.scss
+++ b/src/app/pages/client-page/team-selection/team-selection.component.scss
@@ -11,15 +11,22 @@ nz-layout {
   // background-color: white !important;
 }
 
-button.user-submit-btn {
-  margin-top: 20px;
-  height: 30px;
-  background-color: cornflowerblue;
-  font-size: 14px;
-  font-weight: 600;
-  border: 0;
-  border-radius: 3px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  color: white;
-  width: 100% !important;
+input {
+  font-size: 20px !important;
+}
+
+input[type="text"]:focus, textarea:focus {
+  -webkit-text-size-adjust: 100%;
+}
+.ant-select {
+  font-size: 20px !important;
+}
+
+.ant-select-selection--single {
+  font-size: 20px !important;
+}
+
+html {
+  height: fit-content;
+  background-color: #f0f2f5;
 }
