--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -27,5 +27,7 @@
 }
 
 nz-layout.ant-layout {
-  // background-color: black;
+    padding-bottom: 15px !important;
+    height: 100%;
+    min-height: fit-content !important;
 }
