--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,16 +1,19 @@
-<nz-layout>
-  <nz-sider *ngIf="false" [nzWidth]="200">
-    <div class="host-controls">
-      <button style="text-align: center;" routerLink="/">Gameboard</button>
-      <button style="text-align: center;" routerLink="/leadership">Leaderboard</button>
-      <button style="text-align: center;" routerLink="/teams">Teams</button>
-      <button style="text-align: center;">Reset Game</button>
-    </div>
-  </nz-sider>
+<div class="home-page-wrapper">
   <nz-layout>
-    <nz-content style="margin:0 16px;">
-    <div class="content-wrapper">
-      <router-outlet></router-outlet>
-    </div>
-  </nz-content>
-</nz-layout>
+    <nz-sider *ngIf="showSidebar" [nzWidth]="170">
+      <div class="host-controls">
+        <button style="text-align: center;" routerLink="host/game">Gameboard</button>
+        <button style="text-align: center;" routerLink="host/leadership">Leaderboard</button>
+        <button style="text-align: center;" routerLink="host/teams">Teams</button>
+        <button style="text-align: center;">Reset Game</button>
+      </div>
+    </nz-sider>
+    <nz-layout>
+      <nz-content style="margin:0 16px;">
+        <div class="content-wrapper">
+          <router-outlet></router-outlet>
+        </div>
+      </nz-content>
+    </nz-layout>
+  </nz-layout>
+</div>
