--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -9,6 +9,7 @@
 }
 
 .host-controls {
+  padding: 50px 15px 15px 15px;
   display: flex;
   flex-direction: column;
   position: fixed;
@@ -30,4 +31,18 @@ nz-layout.ant-layout {
     padding-bottom: 15px !important;
     height: 100%;
     min-height: fit-content !important;
+}
+nz-sider {
+  width: fit-content !important;
+  background-color: transparent !important;
+}
+
+.home-page-wrapper {
+  padding-top: 50px;
+  height: 100%;
+  background-color: black;
+
+  nz-layout {
+    background-color: black;
+  }
 }
