--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -9,13 +9,13 @@
 }
 
 .host-controls {
-  padding: 50px 15px 15px 15px;
+  padding: 0 15px 0 22.5px;
   display: flex;
   flex-direction: column;
   position: fixed;
   
   button {
-    border-radius: 25px;
+    border-radius: 5px;
     height: 50px;
     width: 140px;
     margin-bottom: 10px;
