--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -4,7 +4,8 @@
   </div>
   
   <div class="game-play-wrapper" *ngIf="categories && game">
-    <div class="game-title">{{ game.name }}</div>
+    <!-- <div class="game-title">{{ game.name }}</div> -->
+    <div class="game-title">The Gig Is Up!</div>
     <div class="question-category-wrapper">
       <div class="question-category-list" *ngFor="let category of categories">
         <div class="non-all-in-categories-wrapper">
