--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,9 +2,9 @@
   <nz-layout>
     <nz-sider *ngIf="showSidebar" [nzWidth]="170">
       <div class="host-controls">
-        <button style="text-align: center;" routerLink="host/game">Gameboard</button>
-        <button style="text-align: center;" routerLink="host/leadership">Leaderboard</button>
-        <button style="text-align: center;" routerLink="host/teams">Teams</button>
+        <button style="text-align: center;" routerLink="game">Gameboard</button>
+        <button style="text-align: center;" routerLink="leadership">Leaderboard</button>
+        <button style="text-align: center;" routerLink="teams">Teams</button>
         <button style="text-align: center;">Reset Game</button>
       </div>
     </nz-sider>
