--- a/src/app/pages/game-page/game-page.component.scss
+++ b/src/app/pages/game-page/game-page.component.scss
@@ -1,6 +1,10 @@
 .game-container {
-  background-color: black;
+  height: 800px;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #2d2525;
   display: flex;
+  align-self: flex-start;
   flex-direction: column;
   justify-content: space-around;
 }
@@ -37,7 +41,7 @@
 }
 
 .all-in-button {
-  border-radius: 15px;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
   color: white;
