--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -18,6 +18,7 @@
     border-radius: 5px;
     height: 50px;
     width: 140px;
+    font-weight: 600;
     margin-bottom: 10px;
     box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
 
