--- a/src/app/pages/leader-page/leader-page.component.scss
+++ b/src/app/pages/leader-page/leader-page.component.scss
@@ -1,3 +1,14 @@
 .ant-table-tbody>tr>td {
     background: #fafafa;
 }
+
+.leadership-board-wrapper {
+    background-color: white;
+    height: 800px;
+    border-radius: 5px;
+    padding: 40px;
+}
+
+th {
+    background-color: #b1c2de !important;
+}
