--- a/src/app/pages/play-page/play-page.component.scss
+++ b/src/app/pages/play-page/play-page.component.scss
@@ -2,7 +2,7 @@
     background-color: white;
     height: 800px;
     border-radius: 5px;
-    padding: 20px;
+    padding: 30px;
 }
 
 .play-page-button {
@@ -16,14 +16,31 @@
 
 ul {
     padding: 0;
-    list-style: none;
-    // list-style-type: upper-alpha;
+    list-style-type: upper-alpha;
     li {
         color: white;
         font-size: 20px;
         font-weight: 600;
         padding: 15px;
-        border-radius: 50px;
-        background-color: cadetblue;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        background-color: #897ec3;
     }
+}
+
+.question-controls-wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 20px 0;
+}
+button.question-control {
+    background-color: cadetblue;
+    border-radius: 5px;
+    height: 50px;
+    border: none;
+    color: white;
+    width: 140px;
+    font-weight: 600;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.3);
 }
