--- a/src/app/shared/question-category/question-category.component.scss
+++ b/src/app/shared/question-category/question-category.component.scss
@@ -44,11 +44,6 @@ ul {
 }
 
 
-.disabled {
-  background: grey;
-  pointer-events: none;
-}
-
 @keyframes float {
   0% {
     box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
@@ -64,4 +59,10 @@ ul {
     box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
     transform: translatey(0px);
   }
+}
+
+.disabled-question {
+  background: grey;
+  color: #4c4c4c !important;
+  pointer-events: none;
 }
