--- a/src/app/pages/leader-page/leader-page.component.html
+++ b/src/app/pages/leader-page/leader-page.component.html
@@ -2,14 +2,16 @@
   <nz-table #filterTable [nzData]="displayData">
     <thead (nzSortChange)="sort($event)" nzSingleSort>
       <tr>
-        <th>Team</th>
+        <th nzWidth="15%">Ranking</th>
+        <th nzWidth="65%">Team</th>
         <th nzShowSort nzSortKey="score">Points</th>
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let team of filterTable.data">
+      <tr *ngFor="let team of filterTable.data; let i = index;">
+        <td>{{ i + 1}}</td>
         <td>{{team.name}}</td>
-        <td>{{team.score}}</td>
+        <td>{{team.point}}</td>
       </tr>
     </tbody>
   </nz-table>
