--- a/src/app/pages/team-page/team-page.component.html
+++ b/src/app/pages/team-page/team-page.component.html
@@ -1,4 +1,23 @@
-<button nz-button nzType="primary" (click)="showModal()">New Team</button>
+<div class="team-page-wrapper">
+    <nz-table #filterTable [nzData]="displayData">
+    <thead (nzSortChange)="sort($event)" nzSingleSort>
+      <tr>
+        <th nzWidth="15%">Ranking</th>
+        <th nzWidth="65%">Team</th>
+        <th nzShowSort nzSortKey="score">Points</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let team of filterTable.data; let i = index;">
+        <td>{{ i + 1}}</td>
+        <td>{{team.name}}</td>
+        <td>{{team.point}}</td>
+      </tr>
+    </tbody>
+  </nz-table>
+</div>
+
+<!-- <button nz-button nzType="primary" (click)="showModal()">New Team</button>
 <nz-modal 
   [(nzVisible)]="isVisible" 
   nzTitle="Create Team" 
@@ -16,4 +35,4 @@
           <p>{{team.name}}</p>
         </nz-card>
   </div>
-</div>
+</div> -->
