--- a/src/app/pages/client-page/team-selection/team-selection.component.scss
+++ b/src/app/pages/client-page/team-selection/team-selection.component.scss
@@ -30,3 +30,16 @@ html {
   height: fit-content;
   background-color: #f0f2f5;
 }
+
+.user-submit-btn {
+  width: 100%;
+  height: 30px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3) !important;
+  font-weight: 600 !important;
+  border: none;
+  outline: none;
+  color: white;
+  border-radius: 5px;
+  margin-top: 15px;
+  background-color: #6c6fff;
+}
