--- a/src/app/pages/play-page/play-page.component.html
+++ b/src/app/pages/play-page/play-page.component.html
@@ -2,10 +2,10 @@
     <div class="play-page-wrapper">
         <div class="question-wrapper" *ngIf="question; else loading">
             <div class="question-text">{{ question.questionText }}</div>
-            <div class="music-counter-wrapper">
+            <!-- <div class="music-counter-wrapper">
                 <h1 *ngIf="countDown > 0">{{countDown}}</h1>
                 <h1 *ngIf="countDown > 0">🎼 - {{songName}}</h1>
-            </div>
+            </div> -->
             <div class="question-controls-wrapper">
                 <button
                     class="question-control" 
