adding conditional style for correct answer

--- a/src/app/pages/play-page/play-page.component.scss
+++ b/src/app/pages/play-page/play-page.component.scss
@@ -27,7 +27,7 @@ ul {
         background-color: #897ec3;
     }
 
-    li.show-answer {
+    li.correct-answer {
         background-color: #b85bff;
     }
 }
