--- a/src/app/pages/play-page/play-page.component.html
+++ b/src/app/pages/play-page/play-page.component.html
@@ -30,7 +30,7 @@
         <ng-template #loading>Loading the question...</ng-template>
         <div class="question-answers-wrapper" *ngIf="showAnswers">
             <ul>
-                <li *ngFor="let answer of question.answers; let i = index" class="answer-item">{{ alphabets[i] }}. {{ answer.answerText }}</li>
+                <li *ngFor="let answer of question.answers; let i = index" class="answer-item" [ngClass]="{'correct-answer': showCorrectAnswer && answer.isCorrect}">{{ alphabets[i] }}. {{ answer.answerText }}</li>
             </ul>
         </div>
     </div>
