increased font size on leaderboard table

--- a/src/app/pages/leader-page/leader-page.component.html
+++ b/src/app/pages/leader-page/leader-page.component.html
@@ -2,16 +2,30 @@
   <nz-table #filterTable [nzData]="displayData">
     <thead (nzSortChange)="sort($event)" nzSingleSort>
       <tr>
-        <th nzWidth="15%">Ranking</th>
-        <th nzWidth="65%">Team</th>
-        <th nzShowSort nzSortKey="score">Points</th>
+        <th nzWidth="20%" class="table-font-size table-font-bold ">Ranking</th>
+        <th nzWidth="65%" class="table-font-size">Team</th>
+        <th nzShowSort nzSortKey="score" class="table-font-size">Points</th>
       </tr>
     </thead>
     <tbody>
+        <tr>
+            <td class="table-font-size table-font-bold ">2</td>
+            <td class="table-font-size">Team B</td>
+                    <td class="table-font-size">200</td>
+        </tr>
+        <tr>
+
+                <td class="table-font-size table-font-bold ">2</td>
+        <td class="table-font-size">Team</td>
+        <td class="table-font-size">4000</td>
+      </tr>
+
       <tr *ngFor="let team of filterTable.data; let i = index;">
-        <td>{{ i + 1}}</td>
-        <td>{{team.name}}</td>
-        <td>{{team.point}}</td>
+        <td class="table-font-size">{{ i + 1}}</td>
+        <td class="table-font-size">{{team.name}}</td>
+        <td class="table-font-size">{{team.point}}</td>
+
+
       </tr>
     </tbody>
   </nz-table>
