--- a/src/app/pages/leader-page/leader-page.component.scss
+++ b/src/app/pages/leader-page/leader-page.component.scss
@@ -12,3 +12,11 @@
 th {
     background-color: #b1c2de !important;
 }
+
+.table-font-size {
+    font-size: 3rem;
+}
+
+.table-font-bold {
+    font-weight: bold;
+}
