--- a/src/app/pages/leader-page/leader-page.component.scss
+++ b/src/app/pages/leader-page/leader-page.component.scss
@@ -13,8 +13,12 @@ th {
     background-color: #b1c2de !important;
 }
 
-.table-font-size {
+.table-font-size-header {
     font-size: 3rem;
+}
+
+.table-font-size-data {
+    font-size: 2.5rem;
 }
 
 .table-font-bold {
